  This is optional and can be turned on under View->Group UDFs menu
- Display Log symbol on OH screen.  If log symbol are enabled in OH preferences, the information box will be enlarge to allow
  for 4 log symbols to be displayed while OH is running
- Added image transform capability with perceptual difference algorithm (OpenHoldem)

BUG FIXES:
- Perl menu: "Reload" command was active, even when no formula was loaded (Thank you, JumpingFences).
  Same for "Edit" and "Check syntax". Fixed in rev. 283 (TheHighFish)	

BUG FIXES:
- Perl menu: "Reload" command was active, even when no formula was loaded (Thank you, JumpingFences).
  Same for "Edit" and "Check syntax". Fixed in rev. 283 (TheHighFish)	

- Added an "OnBnClickedOk();" accidentally deleted in rev. 278. (TheHighFish)	

- Formula gets saved under wrong file name (jumpingfences) 	

- OH opens not on top and not in focus (jumpingfences)

MAINTENANCE:


v1.8.2 2008-04-25
NEW STUFF:
- Make CFileDialog open in the most recently accessed directory in the context of 
  file type (.whf, .tm, .dll, .pl) (jumpingfences)
  
- New type of symbols available for logging: log$YourTextGoesHere
  These symbols should make debugging formulas drastically easier.
  
  When executed, they add your specified text to the log.
  
  For example if you have:
  [ br == 2 && (nsuited == 3 || nstraight == 3) && log$ItLives ]
  in your f$rais formula and you flop a backdoor flush draw,
  then OpenHoldem will raise and also add the text "ItLives" to the log file,
  just before the RAIS line. Everytime a log$ symbol is accessed it will be flagged for logging.
  You can use this to track which part of your formula is to blame for the action taken by OH.

  Note: You want to use the log$ symbol at the end of a logic block,
  to make sure it only gets flagged when all the previous statements are true. (Strom)

- versus.bin path registry entry (jumpingfences)

BUG FIXES:
- Fixed the uXseated and uXactive regions being ignored. (Strom)
