@@ -7,7 +7,10 @@ NEW STUFF:
 - Display Log symbol on OH screen.  If log symbol are enabled in OH preferences, the information box will be enlarge to allow
   for 4 log symbols to be displayed while OH is running
 - Added image transform capability with perceptual difference algorithm (OpenHoldem)
-
+- Added support for jamming the slider handle, but only when both an i3handle and an i3slider are defined in the TM. Also
+  required; f4alli must be true, ismyturn must be true, and scraper must have found i3handle on the i3slider path. The 
+  handle will be grabbed and pulled to the extent of slider, and i3button or whatever is defined as alli_but will be depressed.
+  
 BUG FIXES:
 - Perl menu: "Reload" command was active, even when no formula was loaded (Thank you, JumpingFences).
   Same for "Edit" and "Check syntax". Fixed in rev. 283 (TheHighFish)	
